Add staging models and tests for customers and orders
- Update stg_customers.yml to include tests for customer_id and customer_name
- Update stg_orders.yml to include tests for order_id and customer_id relationships
- Add not null tests for customer_id and order_id
- Add tests for unique constraints on customer_id and order_id
- Create SQL tests for validating data integrity in customers and orders

--- a/dbt_project/models/staging/stg_orders.yml
+++ b/dbt_project/models/staging/stg_orders.yml
@@ -1,9 +1,16 @@
 version: 2
 
 models:
-    - name: stg_orders
-      columns:
-        - name: customer_id
-        - name: customer_name
-        - name: order_date
-        - name: store_identifier
+  - name: stg_orders
+    columns:
+      - name: order_id
+        tests:
+          - not_null
+          - unique
+
+      - name: customer_id
+        tests:
+          - not_null
+          - relationships:
+              to: ref('stg_customers')
+              field: customer_id
