Enhance documentation for staging models: add descriptions for columns in stg_customers and stg_orders, and create store_id_description.md

--- a/dbt_project/models/staging/sources.yml
+++ b/dbt_project/models/staging/sources.yml
@@ -3,6 +3,7 @@ version: 2
 sources:
     - name: my_dbt_db
       schema: my_dbt_db
+      description: Source data for the dbt project, including raw customer and order data.
 
       tables:
         - name: raw_customers
